--- a/NoteBooks Draft/R1-NIRv Rad v3.ipynb
+++ b/NoteBooks Draft/R1-NIRv Rad v3.ipynb
@@ -93,9 +93,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2022-05-06</td>\n",
-       "      <td>2023-08-14</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5/6/2022</td>\n",
+       "      <td>8/14/2023</td>\n",
        "      <td>Y</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -115,9 +115,9 @@
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "      <td>mixed pixel, complex topography</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2023-11-23</td>\n",
-       "      <td>2023-11-23</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11/23/2023</td>\n",
+       "      <td>11/23/2023</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -137,7 +137,7 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>topography?</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Duplicate</td>\n",
@@ -159,9 +159,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2022-05-09</td>\n",
-       "      <td>2024-06-18</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5/9/2022</td>\n",
+       "      <td>6/18/2024</td>\n",
        "      <td>Y</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -181,9 +181,9 @@
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Check the site with Sentinal 3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2020-09-12</td>\n",
-       "      <td>2022-06-01</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>9/12/2020</td>\n",
+       "      <td>6/1/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -221,18 +221,18 @@
        "4       No   Check the site with Sentinal 3   \n",
        "\n",
        "   PRISMA Availability (900m Buffer ROI Check) PRISMA Earliest Date  \\\n",
-       "0                                            2           2022-05-06   \n",
-       "1                                            2           2023-11-23   \n",
-       "2                                            0                  NaN   \n",
-       "3                                           27           2022-05-09   \n",
-       "4                                            7           2020-09-12   \n",
+       "0                                          2.0             5/6/2022   \n",
+       "1                                          2.0           11/23/2023   \n",
+       "2                                          0.0                  NaN   \n",
+       "3                                         27.0             5/9/2022   \n",
+       "4                                          7.0            9/12/2020   \n",
        "\n",
        "  PRISMA Latest Date (Before 2024-06-26)       Tomi S2 Cloud  \n",
-       "0                             2023-08-14          Y      NaN  \n",
-       "1                             2023-11-23        NaN      NaN  \n",
+       "0                              8/14/2023          Y      NaN  \n",
+       "1                             11/23/2023        NaN      NaN  \n",
        "2                                    NaN  Duplicate      NaN  \n",
-       "3                             2024-06-18          Y      NaN  \n",
-       "4                             2022-06-01        NaN      NaN  "
+       "3                              6/18/2024          Y      NaN  \n",
+       "4                               6/1/2022        NaN      NaN  "
       ]
      },
      "execution_count": 3,
@@ -251,225 +251,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SP-VAL finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVALBARD finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SW-DAVOS finished!\n",
-      "SWEDEN ICOS finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SW-LAG finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SW-OTT finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SW-PYN finished!\n",
-      "Tapajos KM67 Mature Forest site finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UK-1 finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UK-2 finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UK-Amo finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "US ALASKA 1 finished!\n",
-      "US ALASKA 2 finished!\n",
-      "US-Konza finished!\n",
-      "US-LIN finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "US-OPE finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "US-SERC finished!\n",
-      "Utqiagvik finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_27360\\235916105.py:216: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WWUK finished!\n"
+      "Jolanda di Savoia finished!\n"
      ]
     }
    ],
    "source": [
-    "for i in range(65,df_Site.shape[0]):\n",
+    "for i in range(50,51):\n",
     "    site_Name = df_Site[\"Site\"][i]\n",
     "    site_Lat = df_Site.loc[i,\"Latitude\"]\n",
     "    site_Lon = df_Site.loc[i,\"Longitude\"]\n",
@@ -798,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
