--- a/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
+++ b/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Site Name\n",
-    "site_Name = \"UK-Amo\""
+    "site_Name = \"PORT-FOR\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -109,20 +109,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UK-Amo</td>\n",
-       "      <td>55.792545</td>\n",
-       "      <td>-3.243692</td>\n",
+       "      <td>PORT-FOR</td>\n",
+       "      <td>38.821972</td>\n",
+       "      <td>-8.817312</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Site   Latitude  Longitude\n",
-       "0  UK-Amo  55.792545  -3.243692"
+       "       Site   Latitude  Longitude\n",
+       "0  PORT-FOR  38.821972  -8.817312"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -171,21 +171,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UK-Amo</td>\n",
-       "      <td>55.792545</td>\n",
-       "      <td>-3.243692</td>\n",
-       "      <td>POINT (-3.24369 55.79254)</td>\n",
+       "      <td>PORT-FOR</td>\n",
+       "      <td>38.821972</td>\n",
+       "      <td>-8.817312</td>\n",
+       "      <td>POINT (-8.81731 38.82197)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Site   Latitude  Longitude                   geometry\n",
-       "0  UK-Amo  55.792545  -3.243692  POINT (-3.24369 55.79254)"
+       "       Site   Latitude  Longitude                   geometry\n",
+       "0  PORT-FOR  38.821972  -8.817312  POINT (-8.81731 38.82197)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L1C\\\\S2A_MSIL1C_20230603T112121_N0509_R037_T30UVG_20230603T150055.SAFE\\\\GRANULE\\\\L1C_T30UVG_A041504_20230603T112117\\\\IMG_DATA\\\\T30UVG_20230603T112121_B08.jp2'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\PORT-FOR\\\\L1C\\\\S2B_MSIL1C_20230827T112119_N0509_R037_T29SND_20230827T121533.SAFE\\\\GRANULE\\\\L1C_T29SND_A033811_20230827T112117\\\\IMG_DATA\\\\T29SND_20230827T112119_B08.jp2'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,16 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L1C\\\\S2A_MSIL1C_20230603T112121_N0509_R037_T30UVG_20230603T150055.SAFE\\\\DATASTRIP\\\\DS_2APS_20230603T150055_S20230603T112117\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\PORT-FOR\\\\L1C\\\\S2B_MSIL1C_20230827T112119_N0509_R037_T29SND_20230827T121533.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230827T121533_S20230827T112117\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L1C\\\\S2A_MSIL1C_20230603T112121_N0509_R037_T30UVG_20230603T150055.SAFE\\\\GRANULE\\\\L1C_T30UVG_A041504_20230603T112117\\\\MTD_TL.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\PORT-FOR\\\\L1C\\\\S2B_MSIL1C_20230827T112119_N0509_R037_T29SND_20230827T121533.SAFE\\\\GRANULE\\\\L1C_T29SND_A033811_20230827T112117\\\\MTD_TL.xml'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,15 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\UK-Amo\\L2A\\S2A_MSIL2A_20230603T112121_N0509_R037_T30UVG_20230603T171858.SAFE\\GRANULE\\L2A_T30UVG_A041504_20230603T112117\\IMG_DATA\\R10m\\T30UVG_20230603T112121_B04_10m.jp2\n",
-      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\UK-Amo\\L2A\\S2A_MSIL2A_20230603T112121_N0509_R037_T30UVG_20230603T171858.SAFE\\GRANULE\\L2A_T30UVG_A041504_20230603T112117\\IMG_DATA\\R10m\\T30UVG_20230603T112121_B08_10m.jp2\n"
+      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\PORT-FOR\\L2A\\S2B_MSIL2A_20230827T112119_N0509_R037_T29SND_20230827T130108.SAFE\\GRANULE\\L2A_T29SND_A033811_20230827T112117\\IMG_DATA\\R10m\\T29SND_20230827T112119_B04_10m.jp2\n",
+      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\PORT-FOR\\L2A\\S2B_MSIL2A_20230827T112119_N0509_R037_T29SND_20230827T130108.SAFE\\GRANULE\\L2A_T29SND_A033811_20230827T112117\\IMG_DATA\\R10m\\T29SND_20230827T112119_B08_10m.jp2\n"
      ]
     }
    ],
@@ -343,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\UK-Amo\\\\L2A\\\\S2A_MSIL2A_20230603T112121_N0509_R037_T30UVG_20230603T171858.SAFE\\\\DATASTRIP\\\\DS_2APS_20230603T171858_S20230603T112117\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\PORT-FOR\\\\L2A\\\\S2B_MSIL2A_20230827T112119_N0509_R037_T29SND_20230827T130108.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230827T130108_S20230827T112117\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "rasterio.io.DatasetReader"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,16 +424,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The EPSG of L1C is 32630\n",
-      "The EPSG of L2A is 32630\n",
-      "The final crs is EPSG:32630\n"
+      "The EPSG of L1C is 32629\n",
+      "The EPSG of L2A is 32629\n",
+      "The final crs is EPSG:32629\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -484,21 +484,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UK</td>\n",
-       "      <td>51.153498</td>\n",
-       "      <td>-0.85831</td>\n",
-       "      <td>POINT (649777.718 5669075.312)</td>\n",
+       "      <td>PORT-FOR</td>\n",
+       "      <td>38.821972</td>\n",
+       "      <td>-8.817312</td>\n",
+       "      <td>POINT (515858.874 4297036.74)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Site   Latitude  Longitude                        geometry\n",
-       "0   UK  51.153498   -0.85831  POINT (649777.718 5669075.312)"
+       "       Site   Latitude  Longitude                       geometry\n",
+       "0  PORT-FOR  38.821972  -8.817312  POINT (515858.874 4297036.74)"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,14 +520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Site X, Y: 649777.7178763765,5669075.311861154\n"
+      "Site X, Y: 515858.87446972507,4297036.740277632\n"
      ]
     }
    ],
@@ -540,14 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Site falls on the pixel: 3092, 4977\n"
+      "Site falls on the pixel: 10300, 1587\n"
      ]
     }
    ],
@@ -559,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The spatial coordinates of the (center) pixel which the site falls on is: 649775.0, 5669075.0\n"
+      "The spatial coordinates of the (center) pixel which the site falls on is: 515855.0, 4297035.0\n"
      ]
     }
    ],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,12 +1172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_Distance = ['30m','100m','150m','300m','450m','600m','900m','1350m','1200m','1800m','2500m']\n",
+    "list_GDF = [gdf_30m,gdf_100m,gdf_150m,gdf_300m,gdf_450m,gdf_600m,gdf_900m,gdf_1350m,gdf_1200m,gdf_1800m,gdf_2500m]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(list_Distance)):\n",
     "    list_GDF[i].to_file(cwd_Images_Processed + \"\\\\\" + site_Name + \"\\\\\" + list_Distance[i] + \".shp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_600m.to_file(cwd_Images_Processed + \"\\\\\" + site_Name + \"\\\\600m.shp\")"
    ]
   },
   {
