--- a/NoteBooks Draft/RZ-GEE Temporal NIR Cloud Test.ipynb
+++ b/NoteBooks Draft/RZ-GEE Temporal NIR Cloud Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/cloud-platform%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=PTXxDsH_M-p6sjx75B_tQ4XdioFI21Daw0OV9R7TGpY&tc=2cchLwMLtCiu3pNGihQZLsCIhOvnKVCW2l69Svm4ZFs&cc=KapuzqkrBINS5PLOsQjevQyI6ZmbwLmXn4MyxA5eRuo>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/cloud-platform%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=PTXxDsH_M-p6sjx75B_tQ4XdioFI21Daw0OV9R7TGpY&tc=2cchLwMLtCiu3pNGihQZLsCIhOvnKVCW2l69Svm4ZFs&cc=KapuzqkrBINS5PLOsQjevQyI6ZmbwLmXn4MyxA5eRuo</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ee.Authenticate(force = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a project called \"ee-sentinel-2temporal-nir\"\n",
     "# Google Account is jiawei.gao.polimi@gmail.com\n",
-    "ee.Authenticate(force = False)\n",
     "ee.Initialize(project='ee-sentinel-2temporal-nir')"
    ]
   },
@@ -440,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
