--- a/NoteBooks/Main.ipynb
+++ b/NoteBooks/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,35 +46,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Number                                                        51\n",
-       "Site                                           Jolanda di Savoia\n",
-       "Serial Number (FLOX)                                         NaN\n",
-       "Country                                                      NaN\n",
-       "Location                                                     NaN\n",
-       "Latitude                                               44.874305\n",
-       "Longitude                                              11.979201\n",
-       "Priority                                                     NaN\n",
-       "Plant functional type (PFT)                                  NaN\n",
-       "Reference network                                            NaN\n",
-       "Number of components                                         NaN\n",
-       "Reduce ROI size (600 x 600 m)                                NaN\n",
-       "Move ROI                                                     NaN\n",
-       "Comments                                                     NaN\n",
-       "PRISMA Availability (900m Buffer ROI Check)                  NaN\n",
-       "PRISMA Earliest Date                                         NaN\n",
-       "PRISMA Latest Date (Before 2024-06-26)                       NaN\n",
-       "Tomi                                                         NaN\n",
-       "S2 Cloud                                                     NaN\n",
+       "Number                                                    51\n",
+       "Site                                                  IT-Mbo\n",
+       "Serial Number (FLOX)                                     NaN\n",
+       "Country                                                Italy\n",
+       "Location                                       Monte Bondone\n",
+       "Latitude                                            46.01468\n",
+       "Longitude                                          11.045831\n",
+       "Priority                                                 NaN\n",
+       "Plant functional type (PFT)                              GRA\n",
+       "Reference network                                       ICOS\n",
+       "Number of components                                     NaN\n",
+       "Reduce ROI size (600 x 600 m)                             No\n",
+       "Move ROI                                                  No\n",
+       "Comments                                                 NaN\n",
+       "PRISMA Availability (900m Buffer ROI Check)             21.0\n",
+       "PRISMA Earliest Date                               1/10/2021\n",
+       "PRISMA Latest Date (Before 2024-06-26)             5/18/2024\n",
+       "Tomi                                               Duplicate\n",
+       "S2 Cloud                                                 NaN\n",
        "Name: 50, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,32 +94,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jolanda di Savoia starts!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\ProgramData\\anaconda3\\envs\\DISC\\Lib\\site-packages\\skgstat\\Variogram.py:1715: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  self.cof, self.cov = curve_fit(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SW-PYN New starts!\n",
+      "SW-PYN New has reduced ROI!\n",
       "Internal distance 30 and external distance 100 has been computed!\n",
       "Internal distance 30 and external distance 300 has been computed!\n",
       "Internal distance 100 and external distance 300 has been computed!\n",
+      "Internal distance 300 and external distance 600 has been computed!\n",
       "Internal distance 300 and external distance 900 has been computed!\n",
       "Internal distance 300 and external distance 1200 has been computed!\n",
-      "Jolanda di Savoia done!\n"
+      "SW-PYN New done!\n"
      ]
     }
    ],
    "source": [
-    "for index in range(50,51):\n",
+    "for index in range(78,79):\n",
     "    temp_Site_Name = df_Site['Site'][index]\n",
     "    print(f\"{temp_Site_Name} starts!\")\n",
     "    list_std = []\n",
@@ -239,6 +227,13 @@
     "    my_Variogram_Plot.plot_Variogram(list_distances, list_bins, list_fitted_model, list_range, list_sill, list_nugget, list_empiral_X,list_empiral_Y, site_Name_Graph = temp_Site_Name, path_SaveFig = cwd_Images_Processed + \"\\\\\" + temp_Site_Name  + \"\\\\Variogram.png\", bool_SaveFig = True, bool_CloseFig = True)\n",
     "    print(f\"{temp_Site_Name} done!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
