--- a/NoteBooks Draft/R2-NIRv Rad Variogram and Score.ipynb
+++ b/NoteBooks Draft/R2-NIRv Rad Variogram and Score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,16 +57,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11, 11)"
+       "array([[28.43767329, 29.16726129, 28.60771125, 24.97267174, 25.80323316,\n",
+       "        30.88901978, 27.33459096, 24.39661735, 24.0174946 , 19.81201872,\n",
+       "        18.21507857],\n",
+       "       [27.64589693, 31.40126459, 30.89748235, 29.79665914, 26.24412818,\n",
+       "        31.75140421, 26.62038161, 27.15700358, 27.96284495, 27.81739944,\n",
+       "        25.3496554 ],\n",
+       "       [29.10915634, 36.57408805, 33.43240379, 30.79314965, 33.36392055,\n",
+       "        26.13431342, 21.95241602, 27.29148664, 23.53112326, 18.9073463 ,\n",
+       "        22.01469636],\n",
+       "       [29.09732064, 25.05035107, 22.92941552, 26.39588439, 26.98996762,\n",
+       "        19.20245751, 23.84283808, 26.11675566, 21.38554527, 31.02123108,\n",
+       "        34.66074621],\n",
+       "       [25.13650075, 23.02363823, 19.4903073 , 25.56135786, 26.81892026,\n",
+       "        26.70660271, 29.61898624, 23.22685777, 23.1350253 , 27.43770836,\n",
+       "        28.53430258],\n",
+       "       [23.29832357, 18.8626126 , 26.51539702, 32.01221757, 26.19781706,\n",
+       "        26.88514796, 28.79874094, 30.64757024, 34.99443199, 30.06828291,\n",
+       "        24.63603045],\n",
+       "       [29.14943576, 21.30002507, 20.67746279, 27.62221599, 25.50511295,\n",
+       "        24.48260312, 26.00484045, 26.25933808, 29.28552008, 19.82329625,\n",
+       "        23.22401257],\n",
+       "       [19.22755128, 18.20863885, 16.83719695, 24.1686735 , 27.92196655,\n",
+       "        28.71894365, 32.80032907, 24.81219023, 22.94923693, 24.84863047,\n",
+       "        23.79999676],\n",
+       "       [24.66688127, 25.06578805, 24.26879992, 27.60322388, 29.1851553 ,\n",
+       "        28.52346559, 33.70938574, 24.78910924, 19.10512743, 28.77531454,\n",
+       "        21.50431132],\n",
+       "       [34.05448104, 36.41935361, 35.19259899, 26.08875924, 20.06988497,\n",
+       "        15.56336303, 21.35783954, 21.09295279, 22.56190008, 29.35809874,\n",
+       "        23.62843236],\n",
+       "       [29.28914173, 20.4022395 , 26.07544863, 25.57517411, 21.9916412 ,\n",
+       "        18.73544261, 23.63660043, 18.12043376, 24.95306706, 25.07043544,\n",
+       "        20.9881624 ]])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,12 +106,12 @@
    "source": [
     "img_100 = rio.open(cwd_Images_Processed + \"\\\\\" + site_Name + \"\\\\NIRv 100m.tif\")\n",
     "band_100 = img_100.read(1)\n",
-    "band_100.shape"
+    "band_100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +120,7 @@
        "(15, 15)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,16 +144,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(121, 2)"
+       "array([[ 304355., 3698345.],\n",
+       "       [ 304365., 3698345.],\n",
+       "       [ 304375., 3698345.],\n",
+       "       [ 304385., 3698345.],\n",
+       "       [ 304395., 3698345.],\n",
+       "       [ 304405., 3698345.],\n",
+       "       [ 304415., 3698345.],\n",
+       "       [ 304425., 3698345.],\n",
+       "       [ 304435., 3698345.],\n",
+       "       [ 304445., 3698345.],\n",
+       "       [ 304455., 3698345.],\n",
+       "       [ 304355., 3698335.],\n",
+       "       [ 304365., 3698335.],\n",
+       "       [ 304375., 3698335.],\n",
+       "       [ 304385., 3698335.],\n",
+       "       [ 304395., 3698335.],\n",
+       "       [ 304405., 3698335.],\n",
+       "       [ 304415., 3698335.],\n",
+       "       [ 304425., 3698335.],\n",
+       "       [ 304435., 3698335.],\n",
+       "       [ 304445., 3698335.],\n",
+       "       [ 304455., 3698335.],\n",
+       "       [ 304355., 3698325.],\n",
+       "       [ 304365., 3698325.],\n",
+       "       [ 304375., 3698325.],\n",
+       "       [ 304385., 3698325.],\n",
+       "       [ 304395., 3698325.],\n",
+       "       [ 304405., 3698325.],\n",
+       "       [ 304415., 3698325.],\n",
+       "       [ 304425., 3698325.],\n",
+       "       [ 304435., 3698325.],\n",
+       "       [ 304445., 3698325.],\n",
+       "       [ 304455., 3698325.],\n",
+       "       [ 304355., 3698315.],\n",
+       "       [ 304365., 3698315.],\n",
+       "       [ 304375., 3698315.],\n",
+       "       [ 304385., 3698315.],\n",
+       "       [ 304395., 3698315.],\n",
+       "       [ 304405., 3698315.],\n",
+       "       [ 304415., 3698315.],\n",
+       "       [ 304425., 3698315.],\n",
+       "       [ 304435., 3698315.],\n",
+       "       [ 304445., 3698315.],\n",
+       "       [ 304455., 3698315.],\n",
+       "       [ 304355., 3698305.],\n",
+       "       [ 304365., 3698305.],\n",
+       "       [ 304375., 3698305.],\n",
+       "       [ 304385., 3698305.],\n",
+       "       [ 304395., 3698305.],\n",
+       "       [ 304405., 3698305.],\n",
+       "       [ 304415., 3698305.],\n",
+       "       [ 304425., 3698305.],\n",
+       "       [ 304435., 3698305.],\n",
+       "       [ 304445., 3698305.],\n",
+       "       [ 304455., 3698305.],\n",
+       "       [ 304355., 3698295.],\n",
+       "       [ 304365., 3698295.],\n",
+       "       [ 304375., 3698295.],\n",
+       "       [ 304385., 3698295.],\n",
+       "       [ 304395., 3698295.],\n",
+       "       [ 304405., 3698295.],\n",
+       "       [ 304415., 3698295.],\n",
+       "       [ 304425., 3698295.],\n",
+       "       [ 304435., 3698295.],\n",
+       "       [ 304445., 3698295.],\n",
+       "       [ 304455., 3698295.],\n",
+       "       [ 304355., 3698285.],\n",
+       "       [ 304365., 3698285.],\n",
+       "       [ 304375., 3698285.],\n",
+       "       [ 304385., 3698285.],\n",
+       "       [ 304395., 3698285.],\n",
+       "       [ 304405., 3698285.],\n",
+       "       [ 304415., 3698285.],\n",
+       "       [ 304425., 3698285.],\n",
+       "       [ 304435., 3698285.],\n",
+       "       [ 304445., 3698285.],\n",
+       "       [ 304455., 3698285.],\n",
+       "       [ 304355., 3698275.],\n",
+       "       [ 304365., 3698275.],\n",
+       "       [ 304375., 3698275.],\n",
+       "       [ 304385., 3698275.],\n",
+       "       [ 304395., 3698275.],\n",
+       "       [ 304405., 3698275.],\n",
+       "       [ 304415., 3698275.],\n",
+       "       [ 304425., 3698275.],\n",
+       "       [ 304435., 3698275.],\n",
+       "       [ 304445., 3698275.],\n",
+       "       [ 304455., 3698275.],\n",
+       "       [ 304355., 3698265.],\n",
+       "       [ 304365., 3698265.],\n",
+       "       [ 304375., 3698265.],\n",
+       "       [ 304385., 3698265.],\n",
+       "       [ 304395., 3698265.],\n",
+       "       [ 304405., 3698265.],\n",
+       "       [ 304415., 3698265.],\n",
+       "       [ 304425., 3698265.],\n",
+       "       [ 304435., 3698265.],\n",
+       "       [ 304445., 3698265.],\n",
+       "       [ 304455., 3698265.],\n",
+       "       [ 304355., 3698255.],\n",
+       "       [ 304365., 3698255.],\n",
+       "       [ 304375., 3698255.],\n",
+       "       [ 304385., 3698255.],\n",
+       "       [ 304395., 3698255.],\n",
+       "       [ 304405., 3698255.],\n",
+       "       [ 304415., 3698255.],\n",
+       "       [ 304425., 3698255.],\n",
+       "       [ 304435., 3698255.],\n",
+       "       [ 304445., 3698255.],\n",
+       "       [ 304455., 3698255.],\n",
+       "       [ 304355., 3698245.],\n",
+       "       [ 304365., 3698245.],\n",
+       "       [ 304375., 3698245.],\n",
+       "       [ 304385., 3698245.],\n",
+       "       [ 304395., 3698245.],\n",
+       "       [ 304405., 3698245.],\n",
+       "       [ 304415., 3698245.],\n",
+       "       [ 304425., 3698245.],\n",
+       "       [ 304435., 3698245.],\n",
+       "       [ 304445., 3698245.],\n",
+       "       [ 304455., 3698245.]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +287,7 @@
     "        temp_list = [temp_x, temp_y]\n",
     "        list_Coordinates_100.append(temp_list)\n",
     "arr_Coordinates_100 = np.array(list_Coordinates_100)\n",
-    "arr_Coordinates_100.shape"
+    "arr_Coordinates_100"
    ]
   },
   {
@@ -2447,7 +2599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
