--- a/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
+++ b/NoteBooks Draft/R1-L1C L2A and NIRv Rad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,18 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Site Name\n",
-    "site_Name = \"SW-PYN\"\n",
-    "site_Name_New = \"SW-PYN New\""
+    "site_Name = \"Tapajos KM67 Mature Forest site\"\n",
+    "site_Name_New = \"Tapajos KM67 Mature Forest site\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,20 +110,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SW-PYN New</td>\n",
-       "      <td>46.30102</td>\n",
-       "      <td>7.61559</td>\n",
+       "      <td>Tapajos KM67 Mature Forest site</td>\n",
+       "      <td>-2.8567</td>\n",
+       "      <td>-54.9589</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Site  Latitude  Longitude\n",
-       "0  SW-PYN New  46.30102    7.61559"
+       "                              Site  Latitude  Longitude\n",
+       "0  Tapajos KM67 Mature Forest site   -2.8567   -54.9589"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,21 +172,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SW-PYN New</td>\n",
-       "      <td>46.30102</td>\n",
-       "      <td>7.61559</td>\n",
-       "      <td>POINT (7.61559 46.30102)</td>\n",
+       "      <td>Tapajos KM67 Mature Forest site</td>\n",
+       "      <td>-2.8567</td>\n",
+       "      <td>-54.9589</td>\n",
+       "      <td>POINT (-54.9589 -2.8567)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Site  Latitude  Longitude                  geometry\n",
-       "0  SW-PYN New  46.30102    7.61559  POINT (7.61559 46.30102)"
+       "                              Site  Latitude  Longitude  \\\n",
+       "0  Tapajos KM67 Mature Forest site   -2.8567   -54.9589   \n",
+       "\n",
+       "                   geometry  \n",
+       "0  POINT (-54.9589 -2.8567)  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,16 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\SW-PYN\\\\L1C\\\\S2B_MSIL1C_20230901T102609_N0509_R108_T32TLS_20230901T125033.SAFE\\\\GRANULE\\\\L1C_T32TLS_A033882_20230901T103356\\\\IMG_DATA\\\\T32TLS_20230901T102609_B08.jp2'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L1C\\\\S2B_MSIL1C_20230819T135709_N0509_R067_T21MYS_20230819T172029.SAFE\\\\GRANULE\\\\L1C_T21MYS_A033698_20230819T135707\\\\IMG_DATA\\\\T21MYS_20230819T135709_B08.jp2'"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\SW-PYN\\\\L1C\\\\S2B_MSIL1C_20230901T102609_N0509_R108_T32TLS_20230901T125033.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230901T125033_S20230901T103356\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L1C\\\\S2B_MSIL1C_20230819T135709_N0509_R067_T21MYS_20230819T172029.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230819T172029_S20230819T135707\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,16 +280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\SW-PYN\\\\L1C\\\\S2B_MSIL1C_20230901T102609_N0509_R108_T32TLS_20230901T125033.SAFE\\\\GRANULE\\\\L1C_T32TLS_A033882_20230901T103356\\\\MTD_TL.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L1C\\\\S2B_MSIL1C_20230819T135709_N0509_R067_T21MYS_20230819T172029.SAFE\\\\GRANULE\\\\L1C_T21MYS_A033698_20230819T135707\\\\MTD_TL.xml'"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,15 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\SW-PYN\\L2A\\S2B_MSIL2A_20230901T102609_N0509_R108_T32TLS_20230901T134813.SAFE\\GRANULE\\L2A_T32TLS_A033882_20230901T103356\\IMG_DATA\\R10m\\T32TLS_20230901T102609_B04_10m.jp2\n",
-      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\SW-PYN\\L2A\\S2B_MSIL2A_20230901T102609_N0509_R108_T32TLS_20230901T134813.SAFE\\GRANULE\\L2A_T32TLS_A033882_20230901T103356\\IMG_DATA\\R10m\\T32TLS_20230901T102609_B08_10m.jp2\n"
+      "The path to B04 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\Tapajos KM67 Mature Forest site\\L2A\\S2B_MSIL2A_20230819T135709_N0509_R067_T21MYS_20230819T181035.SAFE\\GRANULE\\L2A_T21MYS_A033698_20230819T135707\\IMG_DATA\\R10m\\T21MYS_20230819T135709_B04_10m.jp2\n",
+      "The path to B08 is c:\\Users\\m1865\\Desktop\\DISC\\Sentinel-2 Images Raw\\Tapajos KM67 Mature Forest site\\L2A\\S2B_MSIL2A_20230819T135709_N0509_R067_T21MYS_20230819T181035.SAFE\\GRANULE\\L2A_T21MYS_A033698_20230819T135707\\IMG_DATA\\R10m\\T21MYS_20230819T135709_B08_10m.jp2\n"
      ]
     }
    ],
@@ -344,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\SW-PYN\\\\L2A\\\\S2B_MSIL2A_20230901T102609_N0509_R108_T32TLS_20230901T134813.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230901T134813_S20230901T103356\\\\MTD_DS.xml'"
+       "'c:\\\\Users\\\\m1865\\\\Desktop\\\\DISC\\\\Sentinel-2 Images Raw\\\\Tapajos KM67 Mature Forest site\\\\L2A\\\\S2B_MSIL2A_20230819T135709_N0509_R067_T21MYS_20230819T181035.SAFE\\\\DATASTRIP\\\\DS_2BPS_20230819T181035_S20230819T135707\\\\MTD_DS.xml'"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +389,7 @@
        "rasterio.io.DatasetReader"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,16 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The EPSG of L1C is 32632\n",
-      "The EPSG of L2A is 32632\n",
-      "The final crs is EPSG:32632\n"
+      "The EPSG of L1C is 32721\n",
+      "The EPSG of L2A is 32721\n",
+      "The final crs is EPSG:32721\n"
      ]
     }
    ],
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -485,21 +488,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>SW-PYN New</td>\n",
-       "      <td>46.30102</td>\n",
-       "      <td>7.61559</td>\n",
-       "      <td>POINT (393385.19 5128425.079)</td>\n",
+       "      <td>Tapajos KM67 Mature Forest site</td>\n",
+       "      <td>-2.8567</td>\n",
+       "      <td>-54.9589</td>\n",
+       "      <td>POINT (726891.047 9684044.712)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Site  Latitude  Longitude                       geometry\n",
-       "0  SW-PYN New  46.30102    7.61559  POINT (393385.19 5128425.079)"
+       "                              Site  Latitude  Longitude  \\\n",
+       "0  Tapajos KM67 Mature Forest site   -2.8567   -54.9589   \n",
+       "\n",
+       "                         geometry  \n",
+       "0  POINT (726891.047 9684044.712)  "
       ]
      },
-     "execution_count": 229,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Site X, Y: 393385.1900443304,5128425.07924464\n"
+      "Site X, Y: 726891.0466288019,9684044.711766005\n"
      ]
     }
    ],
@@ -541,14 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Site falls on the pixel: 7159, 9338\n"
+      "Site falls on the pixel: 1595, 2693\n"
      ]
     }
    ],
@@ -560,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The spatial coordinates of the (center) pixel which the site falls on is: 393385.0, 5128425.0\n"
+      "The spatial coordinates of the (center) pixel which the site falls on is: 726895.0, 9684045.0\n"
      ]
     }
    ],
@@ -586,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,51 +761,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the quantification value! \n",
     "quantification_L2A = int(BS_L2A_dS.find(\"BOA_QUANTIFICATION_VALUE\").text)\n",
     "# Get the radiometric offset!\n",
-    "offset_L2A_B04 = int(BS_L2A_dS.find(\"BOA_ADD_OFFSET\", {\"band_id\": \"3\"}).text)\n",
-    "offset_L2A_B08 = int(BS_L2A_dS.find(\"BOA_ADD_OFFSET\", {\"band_id\": \"7\"}).text)"
+    "offset_L2A_B04 = abs(int(BS_L2A_dS.find(\"BOA_ADD_OFFSET\", {\"band_id\": \"3\"}).text))\n",
+    "offset_L2A_B08 = abs(int(BS_L2A_dS.find(\"BOA_ADD_OFFSET\", {\"band_id\": \"7\"}).text))\n",
+    "offset_L2A_B08"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_16296\\3502011535.py:2: RuntimeWarning: divide by zero encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n",
-      "C:\\Users\\m1865\\AppData\\Local\\Temp\\ipykernel_16296\\3502011535.py:2: RuntimeWarning: invalid value encountered in divide\n",
-      "  NDVI = ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A - (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A) / ((values_L2A_B08 + offset_L2A_B08).astype(float) / quantification_L2A + (values_L2A_B04 + offset_L2A_B04).astype(float) / quantification_L2A )\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[ 0.19537572,  0.16960058,  0.18029275, ...,  0.76923077,\n",
-       "         0.77034501,  0.74197152],\n",
-       "       [ 0.19699812,  0.16961131,  0.17440841, ...,  0.83260814,\n",
-       "         0.79211087,  0.78713511],\n",
-       "       [ 0.16236202,  0.14989733,  0.15636665, ...,  0.87170562,\n",
-       "         0.83460173,  0.80200051],\n",
+       "array([[ 0.46726047,  0.46914021,  0.47102313, ...,  0.40375123,\n",
+       "         0.45275035,  0.49636225],\n",
+       "       [ 0.46319393,  0.46362649,  0.4695392 , ...,  0.46406268,\n",
+       "         0.44605065,  0.41604456],\n",
+       "       [ 0.45807089,  0.47063789,  0.47569816, ...,  0.41875761,\n",
+       "         0.3439582 ,  0.30219992],\n",
        "       ...,\n",
-       "       [ 0.89314569,  0.79340773,  0.50172277, ..., -0.07677467,\n",
-       "        -0.07796864, -0.06577153],\n",
-       "       [ 0.88239014,  0.62520548,  0.29261198, ..., -0.0807878 ,\n",
-       "        -0.0757764 , -0.07099225],\n",
-       "       [ 0.87900786,  0.65697015,  0.30496454, ..., -0.06714664,\n",
-       "        -0.06800715, -0.07561597]])"
+       "       [-0.0051619 , -0.00775558, -0.00634548, ...,  0.15353371,\n",
+       "         0.14285714,  0.11974954],\n",
+       "       [-0.005145  , -0.01148886, -0.0112782 , ...,  0.14784876,\n",
+       "         0.11643657,  0.11859059],\n",
+       "       [-0.00611189, -0.01129412, -0.00636042, ...,  0.12797927,\n",
+       "         0.11227978,  0.11081864]])"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +830,7 @@
     "    \"driver\": \"GTiff\",\n",
     "    \"dtype\": 'float64'\n",
     "})\n",
-    "with rio.open(cwd_Images_Processed + \"\\\\\" + site_Name_New + \"\\\\NDVI.tif\", 'w', **out_meta) as dest:\n",
+    "with rio.open(cwd_Images_Processed + \"\\\\\" + site_Name_New + \"\\\\NDVI No Offset.tif\", 'w', **out_meta) as dest:\n",
     "    dest.write(NDVI, 1)"
    ]
   },
@@ -835,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,9 +855,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the quantification value! \n",
     "quantification_L1C = int(BS_L1C_dS.find(\"QUANTIFICATION_VALUE\").text)\n",
@@ -858,7 +877,8 @@
     "# Get the U\n",
     "U_L1C = float(BS_L1C_dS.find(\"U\").text)\n",
     "# Get the solar irradiance\n",
-    "SolarIrr = float(BS_L1C_dS.find(\"SOLAR_IRRADIANCE\", {\"bandId\": \"7\"}).text)"
+    "SolarIrr = float(BS_L1C_dS.find(\"SOLAR_IRRADIANCE\", {\"bandId\": \"7\"}).text)\n",
+    "quantification_L1C"
    ]
   },
   {
@@ -870,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +911,7 @@
        "(23, 23)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +953,7 @@
        "(10980, 10980)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +975,7 @@
        "(11500, 11500)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +998,7 @@
        "(10980, 10980)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,6 +1014,26 @@
    "metadata": {},
    "source": [
     "### Now, finally we can calculate the radiance of L1C from reflectance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1000"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "offset_L1C"
    ]
   },
   {
@@ -1195,11 +1235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gdf_600m.to_file(cwd_Images_Processed + \"\\\\\" + site_Name + \"\\\\600m.shp\")"
+    "gdf_600m.to_file(cwd_Images_Processed + \"\\\\\" + site_Name + \"\\\\600m.shp\")"
    ]
   },
   {
