--- a/NoteBooks Draft/RZ-GEE Could Test 2.ipynb
+++ b/NoteBooks Draft/RZ-GEE Could Test 2.ipynb
@@ -126,14 +126,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 64 dates available for IT-SR2!\n"
+      "There are 64 dates available for IT-SR2!\n",
+      "2023-01-26\n",
+      "2023-01-28\n",
+      "2023-02-05\n",
+      "2023-02-07\n",
+      "2023-02-10\n",
+      "2023-02-12\n",
+      "2023-02-20\n",
+      "2023-03-02\n",
+      "2023-03-12\n",
+      "2023-03-14\n",
+      "2023-03-24\n",
+      "2023-03-27\n",
+      "2023-04-01\n",
+      "2023-04-06\n",
+      "2023-04-08\n",
+      "2023-04-16\n",
+      "2023-04-21\n",
+      "2023-04-26\n",
+      "2023-05-06\n",
+      "2023-05-11\n",
+      "2023-05-23\n",
+      "2023-05-26\n",
+      "2023-05-28\n",
+      "2023-06-02\n",
+      "2023-06-07\n",
+      "2023-06-12\n",
+      "2023-06-15\n",
+      "2023-06-17\n",
+      "2023-06-25\n",
+      "2023-06-27\n",
+      "2023-07-02\n",
+      "2023-07-05\n",
+      "2023-07-07\n",
+      "2023-07-10\n",
+      "2023-07-15\n",
+      "2023-07-17\n",
+      "2023-07-25\n",
+      "2023-07-27\n",
+      "2023-08-06\n",
+      "2023-08-11\n",
+      "2023-08-14\n",
+      "2023-08-16\n",
+      "2023-08-19\n",
+      "2023-08-21\n",
+      "2023-08-24\n",
+      "2023-08-26\n",
+      "2023-09-05\n",
+      "2023-09-08\n",
+      "2023-09-10\n",
+      "2023-09-15\n",
+      "2023-09-23\n",
+      "2023-09-25\n",
+      "2023-09-30\n",
+      "2023-10-03\n",
+      "2023-10-08\n",
+      "2023-10-10\n",
+      "2023-10-28\n",
+      "2023-11-07\n",
+      "2023-11-24\n",
+      "2023-11-29\n",
+      "2023-12-17\n",
+      "2023-12-19\n",
+      "2023-12-22\n",
+      "2023-12-24\n"
      ]
     },
     {
@@ -165,6 +229,8 @@
     "        m = m[np.abs(stats.zscore(m['NDVI'])) < 1]\n",
     "        df_Merge_Mean = m.groupby(\"datetime\").mean().reset_index(drop = False)  \n",
     "        print(f\"There are {df_Merge_Mean.shape[0]} dates available for {name_Site}!\")\n",
+    "        for j in range(df_Merge_Mean.shape[0]):\n",
+    "            print(df_Merge_Mean.loc[j,\"datetime\"])\n",
     "        # plt.figure(figsize = (20,10))\n",
     "        # plt.title(f\"{name_Site} (30m Average) Near Infrared Values of Sentinel-2 Images in 2023\")\n",
     "        # plt.plot(df_Merge_Mean['datetime'], df_Merge_Mean['B8'], label = \"NIR\")\n",
